--- a/gradu.bib
+++ b/gradu.bib
@@ -1,25 +1,11 @@
-@book{antworth,
-author={ Evan Antworth },
-title={ PC-KIMMO: A Two-level Processor for Morphological
-      Analysis },
-publisher={ Summer Institute of Linguistics },
-address={ Texas },
-year={ 1990 }}
-
-@book{barton87,
-author={  Edward Barton and Robert Berwick and Eric Ristad },
-title={ Computational Complexity and Natural Language },
-publisher={ The MIT Press },
-year={ 1987 }}
-
-@incollection{ejerhed83,
-author={ Eva Ejerhed and Kenneth Church },
-title={ Finite-state Parsing },
-editor={ Fred Karlsson },
-booktitle={ Papers from the Seventh Scandinavian Conference of
-      Linguistics },
-publisher={ Department of General Linguistics, University of
-      Helsinki, Publications, Number 9--10 },
-year={ 1983 },
-pages={ 410--432 }}
-
+@article{Xu_2007,
+    author =       {Xu, J. and H.-L. Liu and W. Yuan and A. K. Smith and R. G. Roble and C. J. Mertens and J. M. Russell III and M. G. Mlynczak},
+    title =        {Mesopause structure from Thermosphere, Ionosphere, Mesosphere, Energetics, and Dynamics (TIMED)/Sounding of the Atmosphere Using Broadband Emission Radiometry (SABER) observations},
+    journal =      "J. Geophys. Res.",
+    volume =       "112",
+    number =       "D09102",
+    pages =        "",
+    year =         "2007",
+    DOI =          "10.1029/2006JD007711",
+    keywords =     "physics"
+}
