--- a/gradu.bib
+++ b/gradu.bib
@@ -1,3 +1,16 @@
+
+@article{emmert_2015,
+  title={Thermospheric mass density: A review},
+  author={Emmert, JT},
+  journal={Advances in Space Research},
+  volume={56},
+  number={5},
+  pages={773-824},
+  year={2015},
+  publisher={Elsevier}
+}
+
+
 @article{Xu_2007,
     author =       {Xu, J. and H.-L. Liu and W. Yuan and A. K. Smith and R. G. Roble and C. J. Mertens and J. M. Russell III and M. G. Mlynczak},
     title =        {Mesopause structure from Thermosphere, Ionosphere, Mesosphere, Energetics, and Dynamics (TIMED)/Sounding of the Atmosphere Using Broadband Emission Radiometry (SABER) observations},
@@ -8,4 +21,48 @@
     year =         "2007",
     DOI =          "10.1029/2006JD007711",
     keywords =     "physics"
+}
+
+@article{mannucci_2016,
+  title={Scientific challenges in thermosphere-ionosphere forecasting--conclusions from the October 2014 NASA JPL community workshop},
+  author={Mannucci, Anthony J and Hagan, Maura E and Vourlidas, Angelos and Huang, Cheryl Y and Verkhoglyadova, Olga P and Deng, Yue},
+  journal={Journal of Space Weather and Space Climate},
+  volume={6},
+  pages={E01},
+  year={2016},
+  publisher={EDP Sciences}
+}
+
+
+@article{Tsurutani_2005,
+  title={The October 28, 2003 extreme EUV solar flare and resultant extreme ionospheric effects: Comparison to other Halloween events and the Bastille Day event},
+  author={Tsurutani, BT and Judge, DL and Guarnieri, FL and Gangopadhyay, P and Jones, AR and Nuttall, J and Zambon, GA and Didkovsky, L and Mannucci, AJ and Iijima, B and others},
+  journal={Geophysical Research Letters},
+  volume={32},
+  number={3},
+  year={2005},
+  publisher={Wiley Online Library}
+}
+
+
+
+@book{Shim_2014,
+    author =       {Shim, J. S. and M. Kuznetsova and L. Rastatter},
+    title =        {Systematic evaluation of ionosphere/thermosphere (IT) models: CEDAR Electrodynamics Thermosphere Ionosphere (ETI) Challenge (2009-2010)},
+	isbn={9780875904917},
+    series={Geophysical Monograph Series: Modeling the Ionosphere-Thermosphere System},
+    year={2014},
+    publisher={Wiley},
+    keywords = {physics}
+}
+
+@book{Doornbos_2007,
+    title={Thermosphere density model calibration},
+    author={E Doornbos},
+    isbn={978-1-4020-5446-4},
+    series={Space Weather: Research Towards Applications in Europe},
+    year={2007},
+    publisher={Springer, Netherlands},
+    pages={107-114},
+    keywords = {physics}
 }
