--- a/gradu.bib
+++ b/gradu.bib
@@ -33,6 +33,16 @@
   publisher={EDP Sciences}
 }
 
+@article{chen_2016,
+  title={Ionosphere data assimilation modeling of 2015 St. Patrick's Day geomagnetic storm},
+  author={Chen, CH and Lin, CH and Matsuo, T and Chen, WH},
+  journal={Journal of Geophysical Research: Space Physics},
+  volume={121},
+  number={11},
+  year={2016},
+  publisher={Wiley Online Library}
+}
+
 
 @article{Tsurutani_2005,
   title={The October 28, 2003 extreme EUV solar flare and resultant extreme ionospheric effects: Comparison to other Halloween events and the Bastille Day event},
