--- a/gradu.tex
+++ b/gradu.tex
@@ -79,7 +79,9 @@ Termosfäärin ymmärtämiseksi on laadittu useita virtaus- ja elektrodynamiikan yht
 
 Vaikka puoli-empiiriset mallit tuottavat fysikaalisia malleja tarkemman arvion yläilmakehän satelliitteihin kohdistamasta ilmanvastuksesta, liittyy niidenkin käyttöön suuria virheitä, koska termosfäärin todellinen tila ja empiirisen mallin ennustama keskimääräinen tila poikkevat usein toisistaan. Niin fysikaalisten kuin empiiristen mallien ennustusvirhettä on yritetty pienentää korjaamalla mallin alkutilaa sellaiseksi, että se vastaa paremmin havaintoja (pari tiegcm EnKF + Doornbos). Tämän niin kutsutun data-assimilaation avulla mallien ja havaintojen välistä virhettä on etenkin lyhyillä ennustusajoilla saatu merkittävästi pienennettyä, mutta on kuitenkin epäselvää, kuinka paljon ennusteita voidaan parantaa alkutilan paremmalla määrityksellä. 
 
-Toisin kuin alailmakehässä, termosfääristä tehtävien ennusteiden epävarmuus liittyy paljon enemmän epävarmuuteen termosfäärin tilaa ajavissa pakotteissa \citep{mannucci_2016}. Yläilmakehän tärkein energianlähde on auringosta tuleva lyhytaaltoinen E- ja FUV-säteily, jonka säteilyteho voi vaihdella sadoilla prosenteilla minuuttien ja tuntien aikaskaalassa \citep[esim.][]{Tsurutani_2005}. Lisäksi tämä voimakas säteily ionisoi osan termosfäärin kaasusta muodostaen alueelle niin kutsutun ionosfäärin, jonka liike yläilmakehän sähkö- ja magneettikenttien mukaan vaikuttaa myös neutraalin kaasun virtaukseen. Tämän ionosfääri-termosfääri -kytkennän ja auringon lyhytaaltoisen säteilyn muutokset ovat vaikeasti ennustettavissa, mutta voivat vaikuttaa termosfäärin massatiheyteen kymmenillä tai jopa sadoilla prosenteilla \citep[esim.][]{emmert_2015}. 
+Toisin kuin alailmakehässä, termosfääristä tehtävien ennusteiden epävarmuus liittyy hyvin paljon epävarmuuteen termosfäärin tilaa ajavissa pakotteissa \citep{mannucci_2016}. Yläilmakehän tärkein energianlähde on auringosta tuleva lyhytaaltoinen E- ja FUV-säteily, jonka säteilyteho voi vaihdella sadoilla prosenteilla minuuttien ja tuntien aikaskaalassa \citep[esim.][]{Tsurutani_2005}. Lisäksi tämä voimakas säteily ionisoi osan termosfäärin kaasusta muodostaen alueelle niin kutsutun ionosfäärin, jonka liike yläilmakehän sähkö- ja magneettikenttien mukaan vaikuttaa myös neutraalin kaasun virtaukseen. Tämän ionosfääri-termosfääri -kytkennän ja auringon lyhytaaltoisen säteilyn muutokset ovat vaikeasti ennustettavissa, mutta voivat vaikuttaa termosfäärin massatiheyteen kymmenillä tai jopa sadoilla prosenteilla \citep[esim.][]{emmert_2015}. Näin ollen tilanteissa, joissa pakotteen aikakehitykseen liittyyy hyvin suuri epävarmuus, ei alkutilan tarkkakaan määritys auta tuottamaan laadukkaita ennusteita yläilmakehän tilasta \citep{chen_2016}.
+
+
 
 
 
